<resources>
    <string name="app_name">gr. Q - Measurelet-Tablet</string>
    <string name="tilføj">Tilføj</string>
    <string name="measurelet">MEASURELET</string>
    <string name="deletebed">Slet seng</string>
    <string name="beds">Senge</string>
    <string name="fjern">Fjern markører</string>
    <string name="tilf_j_ny_seng">Tilføj ny seng</string>
    <string name="v_skeregistrering">Væskeregistrering</string>
    <string name="v_sketype">Væsketype</string>
    <string name="m_ngde">Mængde</string>
    <string name="timer">Timer</string>
    <string name="ny_registrering">Ny Registrering</string>
    <string name="seng">Seng</string>
    <string name="navn">Navn</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="difference">Difference</string>
    <string name="v_gt">Vægt</string>
    <string name="v_lg_en_seng">Vælg en seng</string>
    <string name="weight">Tilføj Vægt</string>
    <string name="pickadate">Vælg en dato</string>
    <string name="valgafregistrering">Vælg en registrering</string>
    <string name="gem">Gem</string>
    <string name="slet">Slet</string>
    <string name="rediger_registrering">Rediger Registrering</string>
    <string name="v_ske">Væske</string>


    <string-array name="fluidtypes">
        <item>Vand</item>
        <item>Iv</item>
        <item>Kaffe</item>
        <item>Sodavand</item>
        <item>Saftevand</item>
        <item>Andet</item>


    </string-array>

    <array name="material_calendar_months_array">
        <item>Januar</item>
        <item>Februar</item>
        <item>Marts</item>
        <item>April</item>
        <item>Maj</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>December</item>
    </array>


</resources>
